Bug 273617 - property tester expression doesn't check selected element's type

--- a/org.eclipse.debug.ui/plugin.xml
+++ b/org.eclipse.debug.ui/plugin.xml
@@ -1115,6 +1115,7 @@
 				<with variable="selection">
 					<count value="+"/>
 					<iterate>
+						<instanceof value="org.eclipse.core.runtime.IAdaptable"/>
 				    	<test property="org.eclipse.debug.ui.canCreateWatchExpression" value="true"/>
 					</iterate>
 				</with>             
