--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/preferences/DebugPreferencesMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/preferences/DebugPreferencesMessages.properties
@@ -42,6 +42,7 @@ DebugPreferencePage_27=Memor&y buffered color:
 DebugPreferencePage_28=Changed value bac&kground color:
 DebugPreferencePage_29=&Prompt for confirmation when deleting all breakpoints.
 DebugPreferencePage_30=Prompt for confirmation when deleting breakpoint con&tainers.
+DebugPreferencePage_5=Prompt for confirmation when deleting all e&xpressions.
 
 LaunchingPreferencePage_1=&Build (if required) before launching
 LaunchingPreferencePage_2=Save required dirty editors before launching
