Bug 274264 - [Actions] Missing mnemonic for new 'Show Annotations' ruler context menu action

--- a/bundles/org.eclipse.team.cvs.ui/plugin.properties
+++ b/bundles/org.eclipse.team.cvs.ui/plugin.properties
@@ -175,7 +175,7 @@ ShowHistoryAction.label=Show &History
 ShowHistoryAction.name=Show History
 ShowHistoryAction.tooltip=Show History
 
-ShowAnnotationAction.label=Show Ann&otation
+ShowAnnotationAction.label=Show &Annotation
 ShowAnnotationAction.name=Show Annotation
 ShowAnnotationAction.tooltip=Show Annotation
 
