--- a/bundles/org.eclipse.team.cvs.ui/plugin.xml
+++ b/bundles/org.eclipse.team.cvs.ui/plugin.xml
@@ -202,6 +202,7 @@
          locationURI="popup:#AbstractTextEditorRulerContext?after=QuickDiff.Toggle">
          <command
             commandId="org.eclipse.team.cvs.ui.showAnnotation"
+            label="%ShowAnnotationAction.label"
             style="push">
             <visibleWhen
                checkEnabled="false">
