Bug 274601 Problem with InternalAntRunner_Specifying_property_files_is_a_Ant_1_5___feature__Please_update_your_Ant_classpath__6

--- a/ant/org.eclipse.ant.core/src_ant/org/eclipse/ant/internal/core/ant/InternalAntMessages.properties
+++ b/ant/org.eclipse.ant.core/src_ant/org/eclipse/ant/internal/core/ant/InternalAntMessages.properties
@@ -37,7 +37,7 @@ InternalAntRunner_handler_does_not_implement_InputHandler5=The specified input h
 InternalAntRunner_Unable_to_instantiate_input_handler_class=Unable to instantiate specified input handler class {0} : {1}
 InternalAntRunner_Specifying_an_InputHandler_is_an_Ant_1_5_feature=Specifying an InputHandler is an Ant 1.5.* feature. Please update your Ant classpath to include an Ant version greater than this.
 InternalAntRunner_The_diagnositics_options_is_an_Ant_1_5_feature=The diagnostics options is an Ant 1.5.* feature. Please update your Ant classpath to include an Ant version greater than this.
-InternalAntRunner_Specifying_property_files_is_a_Ant_1_5_feature=Specifying property files is a Ant 1.5.* feature. Please update your Ant classpath to include an Ant version greater than this.
+InternalAntRunner_Specifying_property_files_is_a_Ant_1_5_feature=Specifying property files is an Ant 1.5.* feature. Please update your Ant classpath to include an Ant version greater than this.
 InternalAntRunner_Default_target_does_not_exist=Default target {0}{1}{2} does not exist in this project
 InternalAntRunner_anthome_must_be_set_to_use_ant_diagnostics=ANT_HOME must be set to use Ant diagnostics
 InternalAntRunner_Buildfile_is_not_a_file=Buildfile: {0} is not a file
