Bug 275028 - [breadcrumb] Rename "View Mode" sub-menu and other breadcrumb related actions in Debug view

--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/views/launch/LaunchViewMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/views/launch/LaunchViewMessages.properties
@@ -11,17 +11,17 @@
 ###############################################################################
 
 Breadcrumb_NoActiveContext=No Active Context
-LaunchView_ViewModeMenu_label=View &Mode
+LaunchView_ViewModeMenu_label=&Layout
 DebugViewModeAction_Auto_label=&Automatic
 DebugViewModeAction_Auto_tooltip=Automatic
-DebugViewModeAction_Auto_description=Switch view mode automatically when the view is resized
-DebugViewModeAction_Full_label=&Full
-DebugViewModeAction_Full_tooltip=Full
-DebugViewModeAction_Full_description=Always show the full viewer
-DebugViewModeAction_Compact_label=&Compact
-DebugViewModeAction_Compact_tooltip=Compact
-DebugViewModeAction_Compact_description=Always show the compact viewer
+DebugViewModeAction_Auto_description=Switch layout automatically when the view is resized
+DebugViewModeAction_Full_label=&Tree
+DebugViewModeAction_Full_tooltip=Tree
+DebugViewModeAction_Full_description=Always show the tree viewer
+DebugViewModeAction_Compact_label=&Breadcrumb
+DebugViewModeAction_Compact_tooltip=Breadcrumb
+DebugViewModeAction_Compact_description=Always show the breadcrumb viewer
 
-BreadcrumbDropDownAutoExpandAction_label=Auto-&Expand Compact Selector
-BreadcrumbDropDownAutoExpandAction_tooltip=Auto-Expand Compact Selector
-BreadcrumbDropDownAutoExpandAction_description=In the compact mode selection viewer, automatically expand elements to reveal full selection in view.
+BreadcrumbDropDownAutoExpandAction_label=Auto-&Expand Breadcrumb
+BreadcrumbDropDownAutoExpandAction_tooltip=Auto-Expand Breadcrumb
+BreadcrumbDropDownAutoExpandAction_description=In the breadcrumb drop-down, automatically expand elements to reveal full selection in view.
