--- a/examples/org.eclipse.ui.examples.contributions/plugin.xml
+++ b/examples/org.eclipse.ui.examples.contributions/plugin.xml
@@ -697,6 +697,20 @@
                visible="false">
          </separator>
       </menuContribution>
+      
+      <!-- The entry below purposely references an unknown command id. This is for
+           testing that invalid commands will not prevent the workbench from
+           starting up, see bug 275301 for details. --> 
+      <menuContribution
+            locationURI="menu:file?after=additions">
+         <command
+               commandId="test275301.unknownCommand"
+               label="%menu.help.label"
+               style="push">
+         </command>
+      </menuContribution>
+      <!-- End of bug 275301 entry. -->
+           
    </extension>
    <extension
          point="org.eclipse.ui.services">
