Bug 243304: [rulers] Make QuickDiff ruler accessible

--- a/org.eclipse.ui.editors/plugin.properties
+++ b/org.eclipse.ui.editors/plugin.properties
@@ -108,6 +108,9 @@ command.revisions.authorToggle.description = Toggles the display of the revision
 command.revisions.idToggle.name = Toggle Revision Id Display
 command.revisions.idToggle.description = Toggles the display of the revision id
 
+command.showChangeRulerInformation.name = Show Change Ruler Tooltip
+command.showChangeRulerInformation.description = Displays change information for the caret line in a focused hover
+
 conversionActionSet.label= Convert Line Delimiters
 conversionSubMenu.label= Con&vert Line Delimiters To
 
