--- a/org.eclipse.ui.editors/src/org/eclipse/ui/editors/text/ConstructedTextEditorMessages.properties
+++ b/org.eclipse.ui.editors/src/org/eclipse/ui/editors/text/ConstructedTextEditorMessages.properties
@@ -92,4 +92,4 @@ Editor.QuickAssist.description=Quick Fix
 Editor.ShowInformation.label= Show T&ooltip Description
 Editor.ShowInformation.tooltip= Shows the Tooltip Description
 Editor.ShowInformation.image=
-Editor.ShowInformation.description= Displays information for the current caret location in a sticky hover
+Editor.ShowInformation.description= Displays information for the current caret location in a focused hover
