--- a/org.eclipse.ui.editors/src/org/eclipse/ui/texteditor/ConstructedTextEditorMessages.properties
+++ b/org.eclipse.ui.editors/src/org/eclipse/ui/texteditor/ConstructedTextEditorMessages.properties
@@ -104,3 +104,8 @@ Editor.Print.label=&Print
 Editor.Print.tooltip=Print
 Editor.Print.image=
 Editor.Print.description=Print
+
+Editor.ShowChangeRulerInformation.label= Show Change Ruler Tooltip
+Editor.ShowChangeRulerInformation.tooltip= Show Change Ruler Tooltip
+Editor.ShowChangeRulerInformation.image=
+Editor.ShowChangeRulerInformation.description= Displays change information for the caret line in a focused hover
