--- a/org.eclipse.ui.workbench.texteditor/plugin.properties
+++ b/org.eclipse.ui.workbench.texteditor/plugin.properties
@@ -31,7 +31,7 @@ showWhitespaceCharacters.tooltip= Show Whitespace Characters
 showWhitespaceCharacters.description= Shows whitespace characters in current text editor
 
 showInformation.name= Show Tooltip Description
-showInformation.description= Displays information for the current caret location in a sticky hover
+showInformation.description= Displays information for the current caret location in a focused hover
 
 toggleBlockSelectionMode.label= Toggle Block Selection
 toggleBlockSelectionMode.tooltip= Toggle Block Selection
