Bug 276166 - [Net] core.net extends wrong prefs extension point

--- a/bundles/org.eclipse.core.net/plugin.xml
+++ b/bundles/org.eclipse.core.net/plugin.xml
@@ -3,7 +3,7 @@
 <plugin>
    <extension-point id="authenticator" name="Authenticator" schema="schema/authenticator.exsd"/>
    <extension
-         point="org.eclipse.core.runtime.preferences">
+         point="org.eclipse.equinox.preferences.preferences">
       <initializer
             class="org.eclipse.core.internal.net.PreferenceInitializer">
       </initializer>
