--- a/org.eclipse.ua.tests/.settings/org.eclipse.core.resources.prefs
+++ b/org.eclipse.ua.tests/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Tue Apr 14 13:14:47 PDT 2009
+#Mon May 18 10:24:51 PDT 2009
 eclipse.preferences.version=1
 encoding//data/help/search/testnl8859.htm=ISO-8859-1
 encoding//data/help/search/testnlUTF8.htm=UTF-8
+encoding//non_junit/test_plan.htm=ISO-8859-1
