--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/preferences/DebugPreferencesMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/preferences/DebugPreferencesMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2007 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -29,7 +29,7 @@ DebugPreferencePage_1=General Settings for Running and Debugging.
 DebugPreferencePage_2=Re&use editor when displaying source code
 DebugPreferencePage_3=Activate the workbenc&h when a breakpoint is hit
 DebugPreferencePage_0=&Memory unbuffered color:
-DebugPreferencePage_4=&Changed value color:
+DebugPreferencePage_4=Changed &value color:
 DebugPreferencePage_10=Si&ze of recently launched applications list:
 DebugPreferencePage_11=The size of recently launched applications should be between {0} and {1}
 DebugPreferencePage_21=Open the associated perspective when an application suspends
