--- a/examples/org.eclipse.e4.demo.contacts/build.properties
+++ b/examples/org.eclipse.e4.demo.contacts/build.properties
@@ -7,4 +7,6 @@ bin.includes = META-INF/,\
                icons/,\
                images/,\
                Application.xmi,\
-               css/
+               css/,\
+               splash.bmp,\
+               plugin_customization.ini
