--- a/examples/org.eclipse.e4.demo.contacts/plugin.xml
+++ b/examples/org.eclipse.e4.demo.contacts/plugin.xml
@@ -34,6 +34,22 @@
                name="applicationCSS"
                value="platform:/plugin/org.eclipse.e4.demo.contacts/css/dark.css">
          </property>
+         <property
+               name="startupForegroundColor"
+               value="FFFFFF">
+         </property>
+         <property
+               name="startupMessageRect"
+               value="7,252,445,20">
+         </property>
+         <property
+               name="startupProgressRect"
+               value="5,275,445,15">
+         </property>
+         <property
+               name="preferenceCustomization"
+               value="plugin_customization.ini">
+         </property>
       </product>
    </extension>
 </plugin>
