--- a/tests/org.eclipse.compare.tests/patchdata/bug150591_cr_cr_cr/patchConfiguration.properties
+++ b/tests/org.eclipse.compare.tests/patchdata/bug150591_cr_cr_cr/patchConfiguration.properties
@@ -1,3 +1,13 @@
+###############################################################################
+# Copyright (c) 2008 IBM Corporation and others.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#     IBM Corporation - initial API and implementation
+###############################################################################
 # Single CR character is ignored in LineReader for the patch file 
 #(see org.eclipse.compare.internal.core.patch.PatchReader.parse(BufferedReader) 
 # line 97) This results in reading the patch as a single line and ending up with
