Renamed 'Show Change Ruler Tooltip' to 'Show Quick Diff Ruler Tooltip'.

--- a/org.eclipse.ui.editors/src/org/eclipse/ui/texteditor/ConstructedTextEditorMessages.properties
+++ b/org.eclipse.ui.editors/src/org/eclipse/ui/texteditor/ConstructedTextEditorMessages.properties
@@ -105,7 +105,7 @@ Editor.Print.tooltip=Print
 Editor.Print.image=
 Editor.Print.description=Print
 
-Editor.ShowChangeRulerInformation.label= Show Change Ruler Tooltip
-Editor.ShowChangeRulerInformation.tooltip= Show Change Ruler Tooltip
+Editor.ShowChangeRulerInformation.label= Show Quick Diff Ruler Tooltip
+Editor.ShowChangeRulerInformation.tooltip= Show Quick Diff Ruler Tooltip
 Editor.ShowChangeRulerInformation.image=
 Editor.ShowChangeRulerInformation.description= Displays change information for the caret line in a focused hover
