--- a/org.eclipse.ui.examples.javaeditor/Eclipse Java Editor Example/org/eclipse/ui/examples/javaeditor/JavaEditorMessages.properties
+++ b/org.eclipse.ui.examples.javaeditor/Eclipse Java Editor Example/org/eclipse/ui/examples/javaeditor/JavaEditorMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2005 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -38,7 +38,7 @@ AutoIndent.error.bad_location_2=JavaAutoIndentStrategy.calcShiftBackReplace: Bad
 
 CompletionProcessor.ContextInfo.display.pattern=proposal {0} at position {1}
 CompletionProcessor.ContextInfo.value.pattern=proposal {0} valid from {1} to {2}
-CompletionProcessor.Proposal.ContextInfo.pattern={0} valid 5 characters around insertion point
+CompletionProcessor.Proposal.ContextInfo.pattern={0} - valid 5 characters around insertion point
 CompletionProcessor.Proposal.hoverinfo.pattern=Java keyword: {0}
 
 JavaTextHover.emptySelection=empty selection
