This commit was manufactured by cvs2svn to create tag 'R3_5'.
Sprout from master 2009-06-04 21:59:21 UTC Kevin McGuire <kevinm> 'Build submission for I20090604-2000'
Cherrypick from master 2006-02-13 21:37:01 UTC Nick Edgar <nick> 'Bug 126035 [TabbedProperties] Article example should not require IDE or Text':
    examples/org.eclipse.ui.examples.views.properties.tabbed.article/META-INF/MANIFEST.MF
    examples/org.eclipse.ui.examples.views.properties.tabbed.article/plugin.properties
    examples/org.eclipse.ui.examples.views.properties.tabbed.article/plugin.xml

--- a/examples/org.eclipse.ui.examples.views.properties.tabbed.article/plugin.xml
+++ b/examples/org.eclipse.ui.examples.views.properties.tabbed.article/plugin.xml
@@ -27,12 +27,12 @@
          <propertyTab
                category="sample"
                id="ButtonTab"
-               label="%propertyTabs.Button.label"/>
+               label="Button"/>
          <propertyTab
                afterTab="ButtonTab"
                category="sample"
                id="AdvancedTab"
-               label="%propertyTabs.Advanced.label"/>
+               label="Advanced"/>
       </propertyTabs>
    </extension>
    <extension
