--- a/examples/org.eclipse.ui.examples.views.properties.tabbed.article/plugin.properties
+++ b/examples/org.eclipse.ui.examples.views.properties.tabbed.article/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2006, 2008 IBM Corporation and others.
+# Copyright (c) 2006 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -13,6 +13,3 @@ Plugin.providerName = Eclipse.org
 
 Views.category.name = Tabbed Properties View
 Views.example.name = Tabbed Properties Example View
-
-propertyTabs.Advanced.label = Advanced
-propertyTabs.Button.label = Button
