Bug 279506 [releng] All bundles must say Incubation

--- a/bundles/org.eclipse.e4.ui.model.workbench/plugin.properties
+++ b/bundles/org.eclipse.e4.ui.model.workbench/plugin.properties
@@ -7,9 +7,9 @@
 # Contributors:
 #      IBM Corporation - initial API and implementation
 #
-# $Id: plugin.properties,v 1.1 2008/11/02 16:52:04 bbokowski Exp $
+# $Id: plugin.properties,v 1.1 2008/11/11 18:19:11 bbokowski Exp $
 
-pluginName = Workbench Model
+pluginName = Workbench Model (Incubation)
 providerName = www.example.org
 
 _UI_Application_content_type = Application File
