--- a/bundles/org.eclipse.e4.core.services/.settings/org.eclipse.jdt.ui.prefs
+++ b/bundles/org.eclipse.e4.core.services/.settings/org.eclipse.jdt.ui.prefs
@@ -1,6 +1,12 @@
-#Fri Feb 06 10:05:04 EST 2009
+#Wed Jun 17 13:36:59 EDT 2009
 eclipse.preferences.version=1
 editor_save_participant_org.eclipse.jdt.ui.postsavelistener.cleanup=true
+formatter_profile=_Eclipse long lines
+formatter_settings_version=11
+org.eclipse.jdt.ui.ignorelowercasenames=true
+org.eclipse.jdt.ui.importorder=;
+org.eclipse.jdt.ui.ondemandthreshold=99
+org.eclipse.jdt.ui.staticondemandthreshold=99
 sp_cleanup.add_default_serial_version_id=true
 sp_cleanup.add_generated_serial_version_id=false
 sp_cleanup.add_missing_annotations=true
