--- a/tests/org.eclipse.e4.core.tests.services/build.properties
+++ b/tests/org.eclipse.e4.core.tests.services/build.properties
@@ -1,5 +1,6 @@
-source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               test.xml
+               test.xml,\
+               OSGI-INF/
+source.. = src/
