--- a/bundles/org.eclipse.e4.ui.workbench/plugin.xml
+++ b/bundles/org.eclipse.e4.ui.workbench/plugin.xml
@@ -5,6 +5,7 @@
    <extension-point id="org.eclipse.e4.workbench.legacy" name="3.X legacy hook" schema="schema/org.eclipse.e4.workbench.legacy.exsd"/>
    <extension-point id="org.eclipse.e4.workbench.parts" name="e4 parts" schema="schema/org.eclipse.e4.workbench.parts.exsd"/>
    <extension-point id="org.eclipse.e4.workbench.partfactory" name="Part Factory" schema="schema/org.eclipse.e4.workbench.partfactory.exsd"/>
+   <extension-point id="org.eclipse.e4.workbench.model" name="Model extensions" schema="schema/org.eclipse.e4.workbench.model.exsd"/>
    <extension
          point="org.eclipse.core.runtime.adapters">
       <factory
